fix team column overlap small viewport

--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -3,8 +3,8 @@
   margin-bottom: 50px;
   text-align: center;
   img {
-    width: 225px;
-    height: 225px;
+    width: 250px;
+    height: 250px;
     border: 7px solid fade-out($black, 0.9);
     object-fit: cover;
   }
@@ -19,6 +19,7 @@
 }
 
 .team-photo:hover {
+  filter: brightness(60%);
   -webkit-filter: brightness(60%);
   -webkit-transition: all .7s ease;
   -moz-transition: all .7s ease;
